# exemplos_BD_para_estudo_queries

./: pyproject.toml
.github/workflows/: tests.yml
